--- a/soft/src/main/resources/application.properties
+++ b/soft/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/demodb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=john
+spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=root
 spring.datasource.password=G0D953my96qv
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
